[gd_scene load_steps=8 format=2]

[ext_resource path="res://DATA/SCRIPTS/OBJECTS/MAP_ENTER.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.733728, 1 )
colors = PoolColorArray( 0, 1, 0.953125, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 128.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.0
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.1
orbit_velocity_random = 1.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = -20.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 1.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 10.128
scale_random = 1.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Initial Velocity", "Orbit Velocity", "Scale", "Spread" ]

[sub_resource type="Animation" id=6]

resource_name = "spawn"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:process_material:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 4 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ 10.0, 120.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:process_material:radial_accel")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 4 ),
"transitions": PoolRealArray( 0, 1 ),
"update": 0,
"values": [ -20.0, 100.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="MAP_ENTER" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CAM" type="Camera2D" parent="." index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 12, 12 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="PART" type="Particles2D" parent="." index="1"]

rotation = -1.5708
emitting = true
amount = 200
lifetime = 3.0
one_shot = false
preprocess = 0.0
speed_scale = 3.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -9000, -9000, 18000, 18000 )
local_coords = false
draw_order = 0
process_material = SubResource( 5 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time", "Transform" ]

[node name="ANIM" type="AnimationPlayer" parent="PART" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/spawn = SubResource( 6 )
blend_times = [  ]

[node name="KILL_TIME" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="animation_finished" from="PART/ANIM" to="." method="_on_ANIM_animation_finished"]

[connection signal="timeout" from="KILL_TIME" to="." method="_on_KILL_TIME_timeout"]


